--- a/DinoJumping/index.html
+++ b/DinoJumping/index.html
@@ -14,7 +14,7 @@
         <div class="footer">
             <span>
                 Copyright &copy; 2022 by FunGame All Rights Reserved. &nbsp;&nbsp;
-                <a href="mailto:aestheticapp@163.com">Contact Us</a> &nbsp;&nbsp;
+                <a href="mailto:toshea8@163.com">Contact Us</a> &nbsp;&nbsp;
                 <a href="policy.html" target="_blank">Privacy Policy</a> &nbsp;&nbsp;
                 <a href="terms.html" target="_blank">Terms of Use</a>
             </span>
