--- a/DinoJumping/terms.html
+++ b/DinoJumping/terms.html
@@ -63,7 +63,7 @@
     <h3>9 &nbsp;General Information</h3>
     <p>This agreement and this app Privacy Policy control the relationship between this app and you. They do not create any third-party beneficiary rights. If you do not comply with this agreement, and we don’t take action right away, this doesn’t mean that we are giving up any rights that we may have (such as taking action in the future). If it turns out that a particular term is not enforceable, this will not affect any other terms. The formation, entry into force, performance, interpretation and dispute settlement of this Agreement shall be governed by the laws of the Mainland of the People's Republic of China, without regard to the principles of conflict of laws. If any dispute arises between you and this app, the dispute shall be first resolved by negotiation; where the negotiation fails, you agree to submit the dispute to the people's court with jurisdiction at the signing place of this Agreement.</p>
     <p>The headings of this Agreement are for convenience only and do not have any actual meaning. They shall not be taken as a basis for the interpretation of the meaning of this Agreement.</p>
-    <p>Should you have any other complaints, suggestions or matters related to minor device information, please contact us at esvpnapp@gmail.com. We will review your queries and reply within 30 days after verifying your user identity.</p>
+    <p>Should you have any other complaints, suggestions or matters related to minor device information, please contact us at toshea8@163.com. We will review your queries and reply within 30 days after verifying your user identity.</p>
 
     <p>This app enjoys the final interpretation right of this Agreement.</p>
 
