--- a/DinoJumping/policy.html
+++ b/DinoJumping/policy.html
@@ -57,7 +57,7 @@
 <p>We may revise this Privacy Policy in due course. In the event where the terms of this Privacy Policy are amended, we will show you amended Privacy Policy by way of push notifications and/or pop-up windows when you log in or when the APP version has been updated. Please note that we will follow the updated Privacy Policy to collect, use and store your device information only after you have tapped on the consent button in the pop-up window.</p>
 
 <h3>4 Contact us</h3>
-<p>If you have any other complaints， suggestions， or quarries regarding device information of minors, please contact us at&nbsp;esvpnapp@gmail.com. We will review your queries as soon as possible and respond within thirty days after verifying your identity.</p>
+<p>If you have any other complaints， suggestions， or quarries regarding device information of minors, please contact us at&nbsp;toshea8@163.com. We will review your queries as soon as possible and respond within thirty days after verifying your identity.</p>
 
 
 
